Closed
Bug 242019
Opened 21 years ago
Closed 21 years ago
crash clicking links that trigger popup blocking
Categories
(Core Graveyard :: GFX, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: spam, Assigned: Biesinger)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
3.29 KB,
patch
|
bryner
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
sometime over the past 48 hours trunk build started crashing
at http://www.dagbladet.no
To repro: Go to the site, click image links to the "lesser stories", located the
right of the main stories in the middle: Crash
The main story links don't seem to cause the crash, but the three different
"minor-story" links i tried all crashed.
#0 0x41c0cf66 in nsSound::OnStreamComplete ()
from /home/dark/MOZ/TREE1/mozilla/dist/bin/components/libwidget_gtk2.so
#1 0x40bf0947 in XPTC_InvokeByIndex () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/libxpcom.so
#2 0x40bdf1bd in EventHandler () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/libxpcom.so
#3 0x40bd8723 in PL_HandleEvent () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/libxpcom.so
#4 0x40bd8655 in PL_ProcessPendingEvents () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/libxpcom.so
#5 0x40bd9f8e in nsEventQueueImpl::ProcessPendingEvents () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/libxpcom.so
#6 0x41c04b52 in event_processor_callback ()
from /home/dark/MOZ/TREE1/mozilla/dist/bin/components/libwidget_gtk2.so
#7 0x4050e21f in g_vasprintf () from /usr/lib/libglib-2.0.so.0
#8 0x404e8e4a in g_main_depth () from /usr/lib/libglib-2.0.so.0
#9 0x404e9f28 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#10 0x404ea260 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#11 0x404ea8a3 in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
#12 0x401fd403 in gtk_main () from /usr/lib/libgtk-x11-2.0.so.0
#13 0x41c04f40 in nsAppShell::Run () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/components/libwidget_gtk2.so
#14 0x41b53f42 in nsAppShellService::Run () from
/home/dark/MOZ/TREE1/mozilla/dist/bin/components/libnsappshell.so
#15 0x08053dd5 in main1 ()
#16 0x08054781 in main ()
(gdb)
Assignee | ||
Comment 1•21 years ago
|
||
I don't really want to know why nsSound is being used here...
but the problem is most likely that aData is null, because the data could not
be retrieved.
Assignee | ||
Updated•21 years ago
|
Attachment #147271 -
Flags: superreview?(darin)
Attachment #147271 -
Flags: review?(bryner)
That was quick. Patch works like charm.
I block popups, and have setting to beep when a popup is blocked. Moz beeps when
i click on those links now. That's probably why sound code is activated here
![]() |
||
Updated•21 years ago
|
Attachment #147271 -
Flags: review?(bryner) → review+
Summary: crash when clicking links → crash clicking links that trigger popup blocking
![]() |
||
Updated•21 years ago
|
Attachment #147271 -
Flags: superreview?(darin) → superreview+
Assignee | ||
Comment 3•21 years ago
|
||
Checking in widget/src/gtk/nsSound.cpp;
/cvsroot/mozilla/widget/src/gtk/nsSound.cpp,v <-- nsSound.cpp
new revision: 1.40; previous revision: 1.39
done
Checking in widget/src/gtk2/nsSound.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsSound.cpp,v <-- nsSound.cpp
new revision: 1.11; previous revision: 1.10
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•