bug 242019 return from OnStreamComplete when the load failed, instead of crashing r=bryner sr=darin